--- a/log.html
+++ b/log.html
@@ -6,77 +6,92 @@ int main() {
         LogInt Fib(const size_t) {
           LogInt Fib(const size_t) {
             LogInt::LogInt(const int, const std::string &) {
-              <span class="blinking"><font color=#FF0000>(New) <h title="IMP#1(1)">IMP#1</h></font></span>(1) {IMP#1.value_ = 1} IMP#1[0x7ffcdf54c010]
+              <span class="blinking"><font color=#FF0000>(New) <h title="IMP#1(1)">IMP#1</h></font></span>(1) {IMP#1.value_ = 1} IMP#1[0x7fffe5b2c4f0]
             }
           }
           LogInt Fib(const size_t) {
             LogInt::LogInt(const int, const std::string &) {
-              <span class="blinking"><font color=#FF0000>(New) <h title="IMP#2(1)">IMP#2</h></font></span>(1) {IMP#2.value_ = 1} IMP#2[0x7ffcdf54c080]
+              <span class="blinking"><font color=#FF0000>(New) <h title="IMP#2(1)">IMP#2</h></font></span>(1) {IMP#2.value_ = 1} IMP#2[0x7fffe5b2c560]
             }
           }
           LogInt LogInt::operator+(const LogInt &) const {
-            <span class="blinking"><font color=#FF0000>(New) <h title="(IMP#1(1)) + (IMP#2(1))">IMP#3</h></font></span> = <h title="IMP#1(1)">IMP#1</h> + <h title="IMP#2(1)">IMP#2</h> {IMP#3.value_ = 2} IMP#3[0x7ffcdf54c2d0] IMP#1[0x7ffcdf54c010] IMP#2[0x7ffcdf54c080]
+            <span class="blinking"><font color=#FF0000>(New) <h title="(IMP#1(1)) + (IMP#2(1))">IMP#3</h></font></span> = <h title="IMP#1(1)">IMP#1</h> + <h title="IMP#2(1)">IMP#2</h> {IMP#3.value_ = 2} IMP#3[0x7fffe5b2c7b0] IMP#1[0x7fffe5b2c4f0] IMP#2[0x7fffe5b2c560]
           }
         }
         LogInt Fib(const size_t) {
           LogInt::LogInt(const int, const std::string &) {
-            <span class="blinking"><font color=#FF0000>(New) <h title="IMP#4(1)">IMP#4</h></font></span>(1) {IMP#4.value_ = 1} IMP#4[0x7ffcdf54c340]
+            <span class="blinking"><font color=#FF0000>(New) <h title="IMP#4(1)">IMP#4</h></font></span>(1) {IMP#4.value_ = 1} IMP#4[0x7fffe5b2c820]
           }
         }
         LogInt LogInt::operator+(const LogInt &) const {
-          <span class="blinking"><font color=#FF0000>(New) <h title="((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))">IMP#5</h></font></span> = <h title="(IMP#1(1)) + (IMP#2(1))">IMP#3</h> + <h title="IMP#4(1)">IMP#4</h> {IMP#5.value_ = 3} IMP#5[0x7ffcdf54c590] IMP#3[0x7ffcdf54c2d0] IMP#4[0x7ffcdf54c340]
+          <span class="blinking"><font color=#FF0000>(New) <h title="((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))">IMP#5</h></font></span> = <h title="(IMP#1(1)) + (IMP#2(1))">IMP#3</h> + <h title="IMP#4(1)">IMP#4</h> {IMP#5.value_ = 3} IMP#5[0x7fffe5b2ca70] IMP#3[0x7fffe5b2c7b0] IMP#4[0x7fffe5b2c820]
         }
       }
       LogInt Fib(const size_t) {
         LogInt Fib(const size_t) {
           LogInt::LogInt(const int, const std::string &) {
-            <span class="blinking"><font color=#FF0000>(New) <h title="IMP#6(1)">IMP#6</h></font></span>(1) {IMP#6.value_ = 1} IMP#6[0x7ffcdf54c2d0]
+            <span class="blinking"><font color=#FF0000>(New) <h title="IMP#6(1)">IMP#6</h></font></span>(1) {IMP#6.value_ = 1} IMP#6[0x7fffe5b2c7b0]
           }
         }
         LogInt Fib(const size_t) {
           LogInt::LogInt(const int, const std::string &) {
-            <span class="blinking"><font color=#FF0000>(New) <h title="IMP#7(1)">IMP#7</h></font></span>(1) {IMP#7.value_ = 1} IMP#7[0x7ffcdf54c340]
+            <span class="blinking"><font color=#FF0000>(New) <h title="IMP#7(1)">IMP#7</h></font></span>(1) {IMP#7.value_ = 1} IMP#7[0x7fffe5b2c820]
           }
         }
         LogInt LogInt::operator+(const LogInt &) const {
-          <span class="blinking"><font color=#FF0000>(New) <h title="(IMP#6(1)) + (IMP#7(1))">IMP#8</h></font></span> = <h title="IMP#6(1)">IMP#6</h> + <h title="IMP#7(1)">IMP#7</h> {IMP#8.value_ = 2} IMP#8[0x7ffcdf54c600] IMP#6[0x7ffcdf54c2d0] IMP#7[0x7ffcdf54c340]
+          <span class="blinking"><font color=#FF0000>(New) <h title="(IMP#6(1)) + (IMP#7(1))">IMP#8</h></font></span> = <h title="IMP#6(1)">IMP#6</h> + <h title="IMP#7(1)">IMP#7</h> {IMP#8.value_ = 2} IMP#8[0x7fffe5b2cae0] IMP#6[0x7fffe5b2c7b0] IMP#7[0x7fffe5b2c820]
         }
       }
       LogInt LogInt::operator+(const LogInt &) const {
-        <span class="blinking"><font color=#FF0000>(New) <h title="(((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))) + ((IMP#6(1)) + (IMP#7(1)))">IMP#9</h></font></span> = <h title="((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))">IMP#5</h> + <h title="(IMP#6(1)) + (IMP#7(1))">IMP#8</h> {IMP#9.value_ = 5} IMP#9[0x7ffcdf54c850] IMP#5[0x7ffcdf54c590] IMP#8[0x7ffcdf54c600]
+        <span class="blinking"><font color=#FF0000>(New) <h title="(((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))) + ((IMP#6(1)) + (IMP#7(1)))">IMP#9</h></font></span> = <h title="((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))">IMP#5</h> + <h title="(IMP#6(1)) + (IMP#7(1))">IMP#8</h> {IMP#9.value_ = 5} IMP#9[0x7fffe5b2cd30] IMP#5[0x7fffe5b2ca70] IMP#8[0x7fffe5b2cae0]
       }
     }
     LogInt Fib(const size_t) {
       LogInt Fib(const size_t) {
         LogInt Fib(const size_t) {
           LogInt::LogInt(const int, const std::string &) {
-            <span class="blinking"><font color=#FF0000>(New) <h title="IMP#10(1)">IMP#10</h></font></span>(1) {IMP#10.value_ = 1} IMP#10[0x7ffcdf54c2d0]
+            <span class="blinking"><font color=#FF0000>(New) <h title="IMP#10(1)">IMP#10</h></font></span>(1) {IMP#10.value_ = 1} IMP#10[0x7fffe5b2c7b0]
           }
         }
         LogInt Fib(const size_t) {
           LogInt::LogInt(const int, const std::string &) {
-            <span class="blinking"><font color=#FF0000>(New) <h title="IMP#11(1)">IMP#11</h></font></span>(1) {IMP#11.value_ = 1} IMP#11[0x7ffcdf54c340]
+            <span class="blinking"><font color=#FF0000>(New) <h title="IMP#11(1)">IMP#11</h></font></span>(1) {IMP#11.value_ = 1} IMP#11[0x7fffe5b2c820]
           }
         }
         LogInt LogInt::operator+(const LogInt &) const {
-          <span class="blinking"><font color=#FF0000>(New) <h title="(IMP#10(1)) + (IMP#11(1))">IMP#12</h></font></span> = <h title="IMP#10(1)">IMP#10</h> + <h title="IMP#11(1)">IMP#11</h> {IMP#12.value_ = 2} IMP#12[0x7ffcdf54c590] IMP#10[0x7ffcdf54c2d0] IMP#11[0x7ffcdf54c340]
+          <span class="blinking"><font color=#FF0000>(New) <h title="(IMP#10(1)) + (IMP#11(1))">IMP#12</h></font></span> = <h title="IMP#10(1)">IMP#10</h> + <h title="IMP#11(1)">IMP#11</h> {IMP#12.value_ = 2} IMP#12[0x7fffe5b2ca70] IMP#10[0x7fffe5b2c7b0] IMP#11[0x7fffe5b2c820]
         }
       }
       LogInt Fib(const size_t) {
         LogInt::LogInt(const int, const std::string &) {
-          <span class="blinking"><font color=#FF0000>(New) <h title="IMP#13(1)">IMP#13</h></font></span>(1) {IMP#13.value_ = 1} IMP#13[0x7ffcdf54c600]
+          <span class="blinking"><font color=#FF0000>(New) <h title="IMP#13(1)">IMP#13</h></font></span>(1) {IMP#13.value_ = 1} IMP#13[0x7fffe5b2cae0]
         }
       }
       LogInt LogInt::operator+(const LogInt &) const {
-        <span class="blinking"><font color=#FF0000>(New) <h title="((IMP#10(1)) + (IMP#11(1))) + (IMP#13(1))">IMP#14</h></font></span> = <h title="(IMP#10(1)) + (IMP#11(1))">IMP#12</h> + <h title="IMP#13(1)">IMP#13</h> {IMP#14.value_ = 3} IMP#14[0x7ffcdf54c8c0] IMP#12[0x7ffcdf54c590] IMP#13[0x7ffcdf54c600]
+        <span class="blinking"><font color=#FF0000>(New) <h title="((IMP#10(1)) + (IMP#11(1))) + (IMP#13(1))">IMP#14</h></font></span> = <h title="(IMP#10(1)) + (IMP#11(1))">IMP#12</h> + <h title="IMP#13(1)">IMP#13</h> {IMP#14.value_ = 3} IMP#14[0x7fffe5b2cda0] IMP#12[0x7fffe5b2ca70] IMP#13[0x7fffe5b2cae0]
       }
     }
     LogInt LogInt::operator+(const LogInt &) const {
-      <span class="blinking"><font color=#FF0000>(New) <h title="((((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))) + ((IMP#6(1)) + (IMP#7(1)))) + (((IMP#10(1)) + (IMP#11(1))) + (IMP#13(1)))">IMP#15</h></font></span> = <h title="(((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))) + ((IMP#6(1)) + (IMP#7(1)))">IMP#9</h> + <h title="((IMP#10(1)) + (IMP#11(1))) + (IMP#13(1))">IMP#14</h> {IMP#15.value_ = 8} IMP#15[0x7ffcdf54cb30] IMP#9[0x7ffcdf54c850] IMP#14[0x7ffcdf54c8c0]
+      <span class="blinking"><font color=#FF0000>(New) <h title="((((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))) + ((IMP#6(1)) + (IMP#7(1)))) + (((IMP#10(1)) + (IMP#11(1))) + (IMP#13(1)))">IMP#15</h></font></span> = <h title="(((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))) + ((IMP#6(1)) + (IMP#7(1)))">IMP#9</h> + <h title="((IMP#10(1)) + (IMP#11(1))) + (IMP#13(1))">IMP#14</h> {IMP#15.value_ = 8} IMP#15[0x7fffe5b2d010] IMP#9[0x7fffe5b2cd30] IMP#14[0x7fffe5b2cda0]
     }
   }
   LogInt::LogInt(const LogInt &, const std::string &) {
-    (New) <h title="res#1(((((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))) + ((IMP#6(1)) + (IMP#7(1)))) + (((IMP#10(1)) + (IMP#11(1))) + (IMP#13(1))))">res#1</h>(<h title="((((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))) + ((IMP#6(1)) + (IMP#7(1)))) + (((IMP#10(1)) + (IMP#11(1))) + (IMP#13(1)))">IMP#15</h>) {res#1.value_ = 8} res#1[0x7ffcdf54cac0] IMP#15[0x7ffcdf54cb30]
+    (New) <h title="res#1(((((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))) + ((IMP#6(1)) + (IMP#7(1)))) + (((IMP#10(1)) + (IMP#11(1))) + (IMP#13(1))))">res#1</h>(<h title="((((IMP#1(1)) + (IMP#2(1))) + (IMP#4(1))) + ((IMP#6(1)) + (IMP#7(1)))) + (((IMP#10(1)) + (IMP#11(1))) + (IMP#13(1)))">IMP#15</h>) {res#1.value_ = 8} res#1[0x7fffe5b2cfa0] IMP#15[0x7fffe5b2d010]
+  }
+  LogInt::LogInt(const int, const std::string &) {
+    <span class="blinking"><font color=#FF0000>(New) <h title="IMP#16(5)">IMP#16</h></font></span>(5) {IMP#16.value_ = 5} IMP#16[0x7fffe5b2d0d0]
+  }
+  LogInt::LogInt(const int, const std::string &) {
+    <span class="blinking"><font color=#FF0000>(New) <h title="IMP#17(5)">IMP#17</h></font></span>(5) {IMP#17.value_ = 5} IMP#17[0x7fffe5b2d190]
+  }
+  LogInt::LogInt(const int, const std::string &) {
+    <span class="blinking"><font color=#FF0000>(New) <h title="IMP#18(5)">IMP#18</h></font></span>(5) {IMP#18.value_ = 5} IMP#18[0x7fffe5b2d250]
+  }
+  LogInt LogInt::operator+(const LogInt &) const {
+    <span class="blinking"><font color=#FF0000>(New) <h title="(IMP#16(5)) + (IMP#17(5))">IMP#19</h></font></span> = <h title="IMP#16(5)">IMP#16</h> + <h title="IMP#17(5)">IMP#17</h> {IMP#19.value_ = 10} IMP#19[0x7fffe5b2d310] IMP#16[0x7fffe5b2d0d0] IMP#17[0x7fffe5b2d190]
+  }
+  LogInt &LogInt::operator=(const LogInt &) {
+    <h title="(IMP#16(5)) + (IMP#17(5))">IMP#16</h> = <h title="(IMP#16(5)) + (IMP#17(5))">IMP#19</h> {IMP#16.value_ = 10} IMP#16[0x7fffe5b2d0d0] IMP#19[0x7fffe5b2d310]
   }
 }
 </pre>
